# SoccerCamRecorder

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  Dependencies.lua  fmt.cmake  main.cpp  premake5.lua  spdlog.cmake
Analyzer/: premake5.lua
Analyzer/src/: AnalyzerApplication.cpp  AnalyzerLayer.cpp  AnalyzerLayer.h
Recorder/: CMakeLists.txt  CMakeLists.txt.bak  premake5.lua
Recorder/src/RecorderApplication/: ExampleLayer.cpp  ExampleLayer.h  RecorderApplication.cpp
SoccerVisualization/: .gitignore  Application.cpp  Application.h  Base.h  CMakeLists.txt  CMakeLists.txt.bak  EntryPoint.cpp  premake5.lua
SoccerVisualization/Utils/: Log.cpp  Log.h
SoccerVisualization/cmake/: fmt.cmake  spdlog.cmake
SoccerVisualization/src/: SoccerVisualization.h  scrpch.cpp  scrpch.h
SoccerVisualization/src/SoccerVisualization/Core/: Application.cpp  Application.h  Base.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Window.cpp  Window.h
SoccerVisualization/src/SoccerVisualization/Utils/: CudaUtil.h  CudaUtils.h  ImageUtil.h  ImageUtils.h  Log.cpp  Log.h  TimeUtils.h  VideoUtils.h
SoccerVisualization/src/SoccerVisualization/VideoProcessing/: Soc_VideoProcessor.cpp  Soc_VideoProcessor.h  Soc_VideoReader.cpp  Soc_VideoReader.h  Soc_VideoViewer.cpp  Soc_VideoViewer.h  Soc_VideoWriter.cpp  Soc_VideoWriter.h  VideoController.cpp  VideoController.h  VideoProcessor.cpp  VideoProcessor.h  VideoWriter.cpp  VideoWriter.h
SoccerVisualization/src/SoccerVisualization/VideoReader/: VideoReader.cpp  VideoReader.h
Utils/: CudaUtils.h  ImageUtils.h  Log.h  TimeUtils.h
Visualizer/: CMakeLists.txt
scripts/: Setup.py  SetupOpenCV.py
